# airship

./: .envrc  .gitignore  .gitmodules  .travis.yml  Changes.md  LICENSE  Main.hs  README.md  airship.cabal  cabal.project  stack-7.10.yaml  stack-ghc7.8.yaml  stack-ghc8.yaml  stack.yaml  wai-warp-example.cabal
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: ci.yaml  ci.yml
airship/: Changes.md  LICENSE  airship.cabal
airship-tutorial/: README.md  airship-tutorial.cabal
airship-tutorial/main/: tweeter.hs
airship-tutorial/src/: Tweeter.hs
airship-tutorial/src/Tweeter/: Data.hs  Db.hs  Routes.hs  TweetResource.hs  TweetsResource.hs
airship-tutorial/test/: test.hs
airship-tutorial/test/Test/: Tweeter.hs
airship/src/: Airship.hs
airship/src/Airship/: RST.hs  Route.hs  Types.hs
airship/src/Airship/Internal/: Date.hs  Decision.hs  Helpers.hs  Parsers.hs  Route.hs
airship/test/unit/: test.hs
benchmark/: Main.hs  benchmark.hs
diagram/: Makefile  httpdd.fsm.cosmogol  httpdd.fsm.html  httpdd.fsm.json
doc/: authorisation.md  versioning-apis.md
docs/: conf.py  index.rst
example/: Basic.hs  Basic2.hs  Main.hs  Versions.hs  airship-example.cabal  stack.yaml
framework/: mafia
src/: Airship.hs  Airship2.hs
src/Airship/: Config.hs  Date.hs  Decision.hs  Headers.hs  Helpers.hs  Parsers.hs  RST.hs  Resource.hs  Route.hs  Types.hs
src/Airship/Internal/: Date.hs  Decision.hs  Helpers.hs  Parsers.hs  Route.hs  Types.hs
src/Airship/Resource/: Decision.hs  Route.hs  Static.hs  Wai.hs
src/Airship/Resource2/: Data.hs  Decision.hs  Route.hs  Wai.hs
test/unit/: test.hs
test/unit/Test/Airship/Internal/: Route.hs
