name:                   airship
synopsis:               A Webmachine-inspired HTTP library
description:            A Webmachine-inspired HTTP library
version:                0.2.0.0
license:                MIT
license-file:           LICENSE
author:                 Reid Draper and Patrick Thomson
maintainer:             reid@helium.com
category:               Web
build-type:             Simple
cabal-version:          >=1.10

source-repository head
    type: git
    location: https://github.com/helium/airship.git

library
  default-language:    Haskell2010
  hs-source-dirs: src
  ghc-options:  -Wall
  exposed-modules:   Airship
                   , Airship.Headers
                   , Airship.Helpers
                   , Airship.Types
                   , Airship.Resource
                   , Airship.Resource.Static
                   , Airship.Route

  other-modules:     Airship.Internal.Route
                   , Airship.Internal.Date
                   , Airship.Internal.Decision
                   , Airship.Internal.Helpers
                   , Airship.Internal.Parsers

  build-depends:        attoparsec
                      , base >= 4.7 && < 5
                      , base64-bytestring == 1.0.*
                      , blaze-builder >= 0.3 && < 0.5
                      , bytestring
                      , bytestring-trie == 0.2.4.*
                      , case-insensitive
                      , cryptohash == 0.11.6.*
                      , directory == 1.2.2.*
                      , either == 4.3.*
                      , filepath >= 1.3 && < 1.5
                      , http-date
                      , http-media
                      , http-types >= 0.7
                      , lifted-base == 0.2.*
                      , mime-types == 0.1.0.*
                      , monad-control >= 1.0
                      , mtl >= 2.2
                      , network
                      , old-locale
                      , random
                      , text
                      , time
                      , transformers
                      , transformers-base
                      , unix == 2.7.*
                      , unordered-containers
                      , wai == 3.0.*

executable airship-example
  main-is:              Main.hs
  hs-source-dirs: bin
  ghc-options:  -Wall
  default-language:    Haskell2010
  build-depends:        base >=4.7 && < 5
                      , airship
                      , blaze-builder == 0.3.*
                      , bytestring
                      , http-types >= 0.7
                      , mtl == 2.2.*
                      , text
                      , time
                      , unordered-containers
                      , wai == 3.0.2.*
                      , warp == 3.0.*

test-suite unit
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test/unit
  main-is: test.hs
  build-depends: base             >= 4.7     && < 5
               , airship
               , text             == 1.2.*
               , bytestring       >= 0.9.1   && < 0.11
               , tasty            == 0.10.*
               , tasty-quickcheck == 0.8.3.*
               , tasty-hunit        >= 0.9.1 && < 0.10
               , transformers == 0.4.2.*
               , wai == 3.0.*
  ghc-options: -Wall -threaded -O1 -fno-warn-orphans
