name:                   airship
synopsis:               A Webmachine-inspired HTTP library
description:            A Webmachine-inspired HTTP library
homepage:               https://github.com/helium/airship/
Bug-reports:            https://github.com/helium/airship/issues
version:                0.4.0.0
license:                MIT
license-file:           LICENSE
author:                 Reid Draper and Patrick Thomson
maintainer:             reid@helium.com
category:               Web
build-type:             Simple
cabal-version:          >=1.10

source-repository head
    type: git
    location: https://github.com/helium/airship.git

library
  default-language:    Haskell2010
  hs-source-dirs: src
  ghc-options:  -Wall
  exposed-modules:   Airship
                   , Airship.Config
                   , Airship.Headers
                   , Airship.Helpers
                   , Airship.Types
                   , Airship.Resource
                   , Airship.Resource.Static
                   , Airship.Route

  other-modules:     Airship.Internal.Route
                   , Airship.Internal.Date
                   , Airship.Internal.Decision
                   , Airship.Internal.Helpers
                   , Airship.Internal.Parsers

  build-depends:        attoparsec
                      , base >= 4.7 && < 5
                      , base64-bytestring == 1.0.*
                      , blaze-builder >= 0.3 && < 0.5
                      , bytestring
                      , bytestring-trie == 0.2.4.*
                      , case-insensitive
                      , cryptohash == 0.11.6.*
                      , directory
                      , either >= 4.3 && < 4.6
                      , filepath >= 1.3 && < 1.5
                      , http-date
                      , http-media
                      , http-types == 0.9.*
                      , lifted-base == 0.2.*
                      , microlens
                      , monad-control >= 1.0
                      , mime-types == 0.1.0.*
                      , mmorph == 1.0.*
                      , mtl
                      , network
                      , old-locale
                      , random
                      , text
                      , time
                      , transformers
                      , transformers-base
                      , unix == 2.7.*
                      , unordered-containers
                      , wai == 3.0.*
                      , wai-extra == 3.0.*

test-suite unit
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test/unit
  main-is: test.hs
  build-depends: base             >= 4.7     && < 5
               , airship
               , text             == 1.2.*
               , bytestring       >= 0.9.1   && < 0.11
               , tasty            >= 0.10.1  && < 0.12
               , tasty-quickcheck >= 0.8.3   && < 0.8.5
               , tasty-hunit        >= 0.9.1 && < 0.10
               , transformers
               , wai == 3.0.*
  ghc-options: -Wall -threaded -O1 -fno-warn-orphans
