name:               airship
synopsis:           A Webmachine-inspired HTTP library
homepage:           https://github.com/tmcgilchrist/airship/
bug-reports:        https://github.com/tmcgilchrist/airship/issues
version:            0.9.5
license:            MIT
license-file:       LICENSE
author:             Reid Draper and Patrick Thomson
maintainer:         Tim McGilchrist <timmcgil@gmail.com>
category:           Web
build-type:         Simple
cabal-version:      >=1.10
description:
  A Webmachine-inspired HTTP library based off ideas from the original Erlang project <https://github.com/webmachine/webmachine>
  .
  A number of examples can be found in <https://github.com/tmcgilchrist/airship/tree/master/example> illustrating how to build airship based services.

tested-with:
  GHC ==8.2.2 || ==8.4.4 || ==8.6.5 || ==8.8.4 || ==8.10.7 || ==9.2.2

extra-source-files:
  Changes.md
  README.md

source-repository head
  type:     git
  location: https://github.com/tmcgilchrist/airship.git

library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall
  exposed-modules:
    Airship
    Airship.Config
    Airship.Headers
    Airship.Helpers
    Airship.Resource
    Airship.Resource.Static
    Airship.Route
    Airship.RST
    Airship.Types

  other-modules:
    Airship.Internal.Date
    Airship.Internal.Decision
    Airship.Internal.Helpers
    Airship.Internal.Parsers
    Airship.Internal.Route

  build-depends:
      attoparsec
    , base                  >=4.7     && <5
    , base64-bytestring     >=1.0     && <1.3
    , blaze-builder         >=0.3     && <0.5
    , bytestring
    , bytestring-trie       >=0.2.4   && <0.3
    , case-insensitive
    , containers
    , cryptohash            >=0.11    && <0.12
    , directory
    , either                >=4.3     && <6.0
    , filepath              >=1.3     && <1.5
    , http-date
    , http-media
    , http-types            >=0.8     && <0.13
    , lifted-base           >=0.2     && <0.3
    , microlens
    , mime-types            >=0.1.0   && <0.1.1
    , mmorph                >=1.0     && <1.3
    , monad-control         >=1.0
    , mtl
    , network
    , old-locale
    , random
    , semigroups            >=0.18    && <0.21
    , text
    , time
    , transformers
    , transformers-base
    , unix                  >=2.7     && <2.8
    , unordered-containers
    , wai                   >=3.0.3.0 && <3.3
    , wai-extra             >=3.0     && <3.2

-- https://github.com/yesodweb/wai/pull/726
test-suite unit
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test/unit
  main-is:          test.hs
  build-depends:
      airship
    , base              >=4.7    && <5
    , bytestring        >=0.9.1  && <0.11
    , tasty             >=0.10.1 && <1.3
    , tasty-hunit       >=0.9.1  && <0.11
    , tasty-quickcheck  >=0.8.3  && <0.11
    , text              >=1.2    && <2.0
    , transformers
    , wai               >=3.0    && <3.3

  ghc-options:      -Wall -threaded -fno-warn-orphans
