name:                   airship-example
synopsis:               A Webmachine-inspired HTTP library
description:            A Webmachine-inspired HTTP library
version:                0.3.0.0
license:                MIT
license-file:           LICENSE
author:                 Reid Draper and Patrick Thomson
maintainer:             reid@helium.com
category:               Web
build-type:             Simple
cabal-version:          >=1.10

executable              basic
  main-is:              Basic.hs
  ghc-options:          -Wall -threaded -O2 -main-is Basic
  default-language:     Haskell2010
  hs-source-dirs:     .
  build-depends:        base >=4.7 && < 5
                      , airship
                      , blaze-builder >=0.3 && < 0.5
                      , bytestring
                      , http-types >= 0.7
                      , mtl
                      , text
                      , time
                      , unordered-containers
                      , wai == 3.0.*
                      , warp == 3.0.*

executable              basic2
  main-is:              Basic2.hs
  ghc-options:          -Wall -threaded -O2 -main-is Basic2
  default-language:     Haskell2010
  hs-source-dirs:     .
  build-depends:        base >=4.7 && < 5
                      , airship
                      , blaze-builder >=0.3 && < 0.5
                      , bytestring
                      , http-types >= 0.7
                      , mtl
                      , semigroups == 0.16.*
                      , text
                      , time
                      , unordered-containers
                      , wai == 3.0.*
                      , warp == 3.0.*

executable            versions
  main-is:              Versions.hs
  ghc-options:          -Wall -threaded -O2 -main-is Versions
  default-language:     Haskell2010
  hs-source-dirs:     .
  build-depends:        base >=4.7 && < 5
                      , airship
                      , blaze-builder >=0.3 && < 0.5
                      , bytestring
                      , http-types >= 0.7
                      , mtl
                      , text
                      , time
                      , unordered-containers
                      , transformers
                      , containers
                      , uuid
                      , aeson
                      , wai == 3.0.*
                      , warp == 3.0.*

