name:                   airship-example
synopsis:               A Webmachine-inspired HTTP library
description:            Examples for Airship: A Webmachine-inspired HTTP library
version:                0.6.0.0
license:                MIT
license-file:           LICENSE
author:                 Reid Draper and Patrick Thomson
maintainer:             Tim McGilchrist <timmcgil@gmail.com>
category:               Web
build-type:             Simple
cabal-version:          >=1.10
tested-with:            GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.3, GHC == 8.6.3

executable              basic
  main-is:              Basic.hs
  ghc-options:          -threaded -main-is Basic
  default-language:     Haskell2010
  hs-source-dirs:     .
  build-depends:        base                  >=4.7 && < 5
                      , airship
                      , blaze-builder         >=0.3 && < 0.5
                      , bytestring
                      , containers
                      , http-media
                      , http-types            >= 0.7
                      , mtl
                      , text
                      , time
                      , unordered-containers
                      , wai
                      , warp

executable            versions
  main-is:              Versions.hs
  ghc-options:          -threaded -main-is Versions
  default-language:     Haskell2010
  hs-source-dirs:     .
  build-depends:        base                   >=4.7 && < 5
                      , airship
                      , blaze-builder         >=0.3 && < 0.5
                      , bytestring
                      , containers
                      , http-media
                      , http-types            >= 0.7
                      , mtl
                      , text
                      , time
                      , unordered-containers
                      , transformers
                      , containers
                      , uuid
                      , aeson
                      , wai
                      , warp
